--- a/main.css
+++ b/main.css
@@ -1,10 +1,11 @@
 .canvas {
-    /*background: forestgreen;*/
+    background: url(image/water.jpg);
     width: 100px;
     height: 100px;
     position: relative;
     overflow: hidden;
     border: 1px solid black;
+    z-index: 0;
 }
 
 .plain {
@@ -16,6 +17,7 @@
     background: url(image/plaine.png);
     overflow: hidden;
     opacity: 1;
+    z-index: 100;
 }
 
 .plain.bad1 {
@@ -58,7 +60,7 @@
     height: 216px;
     background: url(image/rocket.png);
     overflow: hidden;
-    z-index: -1;
+    z-index: 10;
 }
 
 .rocket.a1 {
@@ -96,15 +98,6 @@
     height: 100px;
     background: url(image/enemy.png);
     overflow: hidden;
-}
-
-.grass {
-    position: absolute;
-    top: 300px;
-    left: 400px;
-    width: 200px;
-    height: 150px;
-    background: url(image/plaine.png);
-    overflow: hidden;
+    z-index: 200;
 }
 
