--- a/main.css
+++ b/main.css
@@ -36,6 +36,10 @@
     z-index: 1000;
 }
 
+.explosion.a0 {
+    background-position: -400px -400px;
+}
+
 .explosion.a1 {
     background-position: 0 -400px;
 }
